attempt to populat toppings array

--- a/index.html
+++ b/index.html
@@ -32,73 +32,73 @@
           <h2>These are the cheese options(non-dairy available):</h2>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="cheese">Mozzarella</label>
+          <input type="checkbox" name="add-toppings" value="cheese">Mozzarella</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="cheese">Goat Cheese</label>
+          <input type="checkbox" name="add-toppings" value="cheese">Goat Cheese</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="cheese">Parmesan</label>
+            <input type="checkbox" name="add-toppings" value="cheese">Parmesan</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="cheese">Cashew Cheese(non-dairy)</label>
+          <input type="checkbox" name="add-toppings" value="cheese">Cashew Cheese(non-dairy)</label>
         </div>
         <h2>Meat options:</h2>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="meat">Pepperoni</label>
+            <input type="checkbox" name="add-toppings" value="meat">Pepperoni</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="meat">Sausage</label>
+          <input type="checkbox" name="add-toppings" value="meat">Sausage</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="meat">Chicken</label>
+            <input type="checkbox" name="add-toppings" value="meat">Chicken</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="meat">Ham</label>
+          <input type="checkbox" name="add-toppings" value="meat">Ham</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="meat">Salami</label>
+            <input type="checkbox" name="add-toppings" value="meat">Salami</label>
         </div>
         <h2>Vegetable options:</h2>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="vegetable">Tomatoes</label>
+          <input type="checkbox" name="add-toppings" value="vegetable">Tomatoes</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="vegetable">Mushrooms</label>
+            <input type="checkbox" name="add-toppings" value="vegetable">Mushrooms</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="vegetable">Artichokes</label>
+          <input type="checkbox" name="add-toppings" value="vegetable">Artichokes</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="vegetable">Roasted Olives</label>
+            <input type="checkbox" name="add-toppings" value="vegetable">Roasted Olives</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="vegetable">Onions</label>
+          <input type="checkbox" name="add-toppings" value="vegetable">Onions</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="vegetable">Pineapple</label>
+          <input type="checkbox" name="add-toppings" value="vegetable">Pineapple</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="vegetable">Basil</label>
+          <input type="checkbox" name="add-toppings"" value="vegetable">Basil</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" value="vegetable">Peppers</label>
+          <input type="checkbox" name="add-toppings" value="vegetable">Peppers</label>
         </div>
     </div>
     <button type="submit" name="button" class="btn btn-default">Place Order</button>
