--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-1.12.4.js"></script>
-    <script src="js/scripts.js"></script>
-    <title>Pizza</title>
-  </head>
+<head>
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-1.12.4.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>Pizza</title>
+</head>
   <body>
       <h1>PIZZA</h1>
       <h2>What Size would you like?</h2>
@@ -32,76 +32,63 @@
           <h2>These are the cheese options(non-dairy available):</h2>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="cheese">Mozzarella</label>
+          <input type="checkbox" name="add-toppings" value="mozzarella">Mozzarella</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="cheese">Goat Cheese</label>
+          <input type="checkbox" name="add-toppings" value="goat">Goat Cheese</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" name="add-toppings" value="cheese">Parmesan</label>
-        </div>
-        <div class="checkbox">
-          <label>
-          <input type="checkbox" name="add-toppings" value="cheese">Cashew Cheese(non-dairy)</label>
+          <input type="checkbox" name="add-toppings" value="cashew">Cashew Cheese(non-dairy)</label>
         </div>
         <h2>Meat options:</h2>
         <div class="checkbox">
           <label>
-            <input type="checkbox" name="add-toppings" value="meat">Pepperoni</label>
+            <input type="checkbox" name="add-toppings" value="pepperoni">Pepperoni</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="meat">Sausage</label>
+          <input type="checkbox" name="add-toppings" value="sausage">Sausage</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" name="add-toppings" value="meat">Chicken</label>
+          <input type="checkbox" name="add-toppings" value="ham">Ham</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="meat">Ham</label>
-        </div>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" name="add-toppings" value="meat">Salami</label>
+            <input type="checkbox" name="add-toppings" value="salami">Salami</label>
         </div>
         <h2>Vegetable options:</h2>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="vegetable">Tomatoes</label>
+          <input type="checkbox" name="add-toppings" value="tomatoes">Tomatoes</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" name="add-toppings" value="vegetable">Mushrooms</label>
+            <input type="checkbox" name="add-toppings" value="mushrooms">Mushrooms</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="vegetable">Artichokes</label>
+            <input type="checkbox" name="add-toppings" value="olives">Roasted Olives</label>
         </div>
         <div class="checkbox">
           <label>
-            <input type="checkbox" name="add-toppings" value="vegetable">Roasted Olives</label>
+          <input type="checkbox" name="add-toppings" value="onions">Onions</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="vegetable">Onions</label>
+          <input type="checkbox" name="add-toppings" value="pineapple">Pineapple</label>
         </div>
         <div class="checkbox">
           <label>
-          <input type="checkbox" name="add-toppings" value="vegetable">Pineapple</label>
+          <input type="checkbox" name="add-toppings" value="peppers">Peppers</label>
         </div>
-        <div class="checkbox">
-          <label>
-          <input type="checkbox" name="add-toppings"" value="vegetable">Basil</label>
-        </div>
-        <div class="checkbox">
-          <label>
-          <input type="checkbox" name="add-toppings" value="vegetable">Peppers</label>
-        </div>
-    </div>
-    <button type="submit" name="button" class="btn btn-default">Place Order</button>
+      </div>
+      <button id="submit-button" type="submit" name="button" class="btn btn-default">Place Order</button>
     </form>
+    <div id=total>
+      <h3>your total is:</h3>
+    </div>
   </body>
 </html>
