--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-sm-6">
           <h2>What Size would you like?</h2>
-        <form>
+        <form id="order-form">
         <div class="pizza-size">
           <div class="radio">
             <label>
@@ -102,9 +102,9 @@
             </div>
           </div>
         </div>
-        <button id="submit-button" type="submit" name="button" class="btn btn-default">Place Order</button>
-        </form>
       </div>
+        <button id="submit-button" type="submit" name="button" class="btn btn-default">Place Order</button>
+      </form>
     </div>
   </body>
 </html>
