style page with css, format page with html, and work out bugs in js

--- a/index.html
+++ b/index.html
@@ -8,10 +8,24 @@
   <title>Pizza</title>
 </head>
   <body>
-    <div class="container">
       <div class="jumbotron">
-        <h1>PIZZA</h1>
+        <div class="row">
+          <div class="col-sm-4">
+            <h3>4pm-10pm</h3>
+            <h3>OPEN EVERY NIGHT</h3>
+          </div>
+          <div class="col-sm-4">
+            <h3>LOCATION</h3>
+            <h3>222 NW PIZZA WAY</h3>
+          </div>
+          <div class="col-sm-4">
+            <h3>PHONE</h3>
+            <h3>222.222.2222</h3>
+          </div>
+        </div>
+          <h1>PIZZA</h1>
       </div>
+      <div class="container">
       <div class="row">
         <div class="col-sm-6">
           <h2>What Size would you like?</h2>
@@ -33,7 +47,7 @@
         </div>
         <div class="col-sm-6">
           <div id=total>
-            <h3>your total is:</h3>
+            <h2>your total is:</h2>
           </div>
         </div>
       </div>
@@ -103,7 +117,7 @@
           </div>
         </div>
       </div>
-        <button id="submit-button" type="submit" name="button" class="btn btn-default">Place Order</button>
+        <button id="submit-button" type="submit" name="button" class="btn">Place Order</button>
       </form>
     </div>
   </body>
