fix js mistake to show cost and clear fields for new pizza order

--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         </div>
         </div>
         <div class="col-sm-6">
-          <div id=total>
-            <h2>your total is:</h2>
+          <div id="total">
+            <h3>Your total total is: $<span id="show-cost"></span></h3>
+            <span class="btn" id="new-order">New Order</span>
           </div>
         </div>
       </div>
